flex wrap fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -690,7 +690,7 @@ footer {
 
 .project-item {
   width: 50%;
-  padding-left: 1em;
+  padding-right: 1em;
   padding-bottom: 2em;
 }
 
